--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ $('#searchBar').keyup(function() {
 <!-- .................................................................................   -->
   
   <style> 
-          td.cell-h{display:none}
+          td.cell-h{}
           div,caption{}
           div#dtable{}</style>
   
