--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ var $table = $('#table');
 	});
 </script>
   
-
+<script href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.0/bootstrap-table.js">
@@ -340,7 +340,41 @@ $('#searchBar').keyup(function() {
 			<th data-field="date" data-filter-control="select" data-sortable="true">Category</th>
 			<th data-field="examen" data-filter-control="select" data-sortable="true">Announced</th>
 			<th data-field="note" data-sortable="true">Note</th>
-		</tr>
+		<th data-field="examen" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="e" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="e6" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="ex" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="ehi" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="exa" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="hiko" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="ehjk" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="egjkk" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="hiooo" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="ejoo" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="sdfgg" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="jjiio" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="ebkk" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="ppjj" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="elll" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="ewwt" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="vnn" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="exajj" data-filter-control="select" data-sortable="true">Announced</th>
+<th data-field="examgjj" data-filter-control="select" data-sortable="true">Announced</th>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</tr>
 	</thead>
 			<tbody>
 				
