--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ $(document).ready(function(){
 <script>
 $('#searchBar').keyup(function() {
   var search_term = $('#searchBar').val();
-  $('.specs-table ').removeHighlight().highlight(search_term);
+  $('.specs-tabl ').removeHighlight().highlight(search_term);
 });
 </script>
 
@@ -326,7 +326,7 @@ $('#searchBar').keyup(function() {
 		</select>
 </span>	
 <div class="container">
-		<table id="table" class="table specs-table table-responsive"
+		<table id="table" class="specs-tabl"
 			 data-toggle="table"
 			 data-search="true"
 			 data-filter-control="true" 
