--- a/index.html
+++ b/index.html
@@ -318,15 +318,15 @@ $('#searchBar').keyup(function() {
 				</div>
 			</div>
 		<div id="dtable" class="">
-<span id="toolbar">
+<div id="toolbar">
 		<select class="form-control">
 				<option value="">Export Basic</option>
 				<option value="all">Export All</option>
 				<option value="selected">Export Selected</option>
 		</select>
-</span>	
+</div>	
 <div class="container">
-		<table id="table" class="specs-tabl"
+		<table id="table" class="specs-tabl table-responsive"
 			 data-toggle="table"
 			 data-search="true"
 			 data-filter-control="true" 
