--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <h1>Hello, world!</h1>
 
 
-
 <div class="container">
 <h1>Bootstrap Table</h1>
 
@@ -51,7 +50,97 @@
 			<th data-field="prenom" data-filter-control="input" data-sortable="true">First Name</th>
 			<th data-field="date" data-filter-control="select" data-sortable="true">Date</th>
 			<th data-field="examen" data-filter-control="select" data-sortable="true">Examination</th>
-
+			<th data-field="note" data-sortable="true">Note</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td class="bs-checkbox "><input data-index="0" name="btSelectItem" type="checkbox"></td>
+			<td>Jitender</td>
+			<td>01/09/2015</td>
+			<td>Français</td>
+			<td>12/20</td>
+		</tr>
+		<tr>
+			<td class="bs-checkbox "><input data-index="1" name="btSelectItem" type="checkbox"></td>
+			<td>Jahid</td>
+			<td>05/09/2015</td>
+			<td>Philosophie</td>
+			<td>8/20</td>
+		</tr>
+		<tr>
+			<td class="bs-checkbox "><input data-index="2" name="btSelectItem" type="checkbox"></td>
+			<td>Valentin</td>
+			<td>05/09/2015</td>
+			<td>Philosophie</td>
+			<td>4/20</td>
+		</tr>
+		<tr>
+			<td class="bs-checkbox "><input data-index="3" name="btSelectItem" type="checkbox"></td>
+			<td>Milton</td>
+			<td>05/09/2015</td>
+			<td>Philosophie</td>
+			<td>10/20</td>
+		</tr>
+		<tr>
+			<td class="bs-checkbox "><input data-index="4" name="btSelectItem" type="checkbox"></td>
+			<td>Gonesh</td>
+			<td>01/09/2015</td>
+			<td>Français</td>
+			<td>14/20</td>
+		</tr>
+		<tr>
+			<td class="bs-checkbox "><input data-index="5" name="btSelectItem" type="checkbox"></td>
+			<td>Valérie</td>
+			<td>07/09/2015</td>
+			<td>Mathématiques</td>
+			<td>19/20</td>
+		</tr>
+		<tr>
+			<td class="bs-checkbox "><input data-index="6" name="btSelectItem" type="checkbox"></td>
+			<td>Valentin</td>
+			<td>01/09/2015</td>
+			<td>Français</td>
+			<td>11/20</td>
+		</tr>
+		<tr>
+			<td class="bs-checkbox "><input data-index="7" name="btSelectItem" type="checkbox"></td>
+			<td>Eric</td>
+			<td>01/10/2015</td>
+			<td>Philosophie</td>
+			<td>8/20</td>
+		</tr>
+		<tr>
+			<td class="bs-checkbox "><input data-index="8" name="btSelectItem" type="checkbox"></td>
+			<td>Valentin</td>
+			<td>07/09/2015</td>
+			<td>Mathématiques</td>
+			<td>14/20</td>
+		</tr>
+		<tr>
+			<td class="bs-checkbox "><input data-index="9" name="btSelectItem" type="checkbox"></td>
+			<td>Valérie</td>
+			<td>01/10/2015</td>
+			<td>Philosophie</td>
+			<td>12/20</td>
+		</tr>
+		<tr>
+			<td class="bs-checkbox "><input data-index="10" name="btSelectItem" type="checkbox"></td>
+			<td>Eric</td>
+			<td>07/09/2015</td>
+			<td>Mathématiques</td>
+			<td>14/20</td>
+		</tr>
+		<tr>
+		<td class="bs-checkbox "><input data-index="11" name="btSelectItem" type="checkbox"></td>
+			<td>Valentin</td>
+			<td>01/10/2015</td>
+			<td>Philosophie</td>
+			<td>10/20</td>
+		</tr>
+	</tbody>
+</table>
+</div>
 
 <script>
 //exporte les données sélectionnées
