--- a/index.html
+++ b/index.html
@@ -320,15 +320,20 @@ $('#searchBar').keyup(function() {
 					
 				</div>
 			</div>
-		<div id="dtable" class="">
+	
+<div class="container">
+<h1>Bootstrap Table</h1>
+
+<p>A table with third party integration  extension Filter control extension Data export</a> pour exporter</p>
+
 <div id="toolbar">
 		<select class="form-control">
 				<option value="">Export Basic</option>
 				<option value="all">Export All</option>
 				<option value="selected">Export Selected</option>
 		</select>
-</div>	
-<div class="container">
+</div>
+
 		<table id="table" class="specs-tabl table-responsive"
 			 data-toggle="table"
 			 data-search="true"
