--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ $('#searchBar').keyup(function() {
 		</select>
 </div>
 
-		<table id="table" class="specs-tabl table-responsive"
+		<table id="table" class="table-responsive"
 			 data-toggle="table"
 			 data-search="true"
 			 data-filter-control="true" 
