--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ which is not very good for the <span>phone</span>.</p>
 <p><b>Battery capacity</b>-Most people think that higher the MAh of battery the better it is.
 But is not true. The backup of your phone depends on lots of factors. It depends on software.</p>
 </div>
-
+<!--
 <input class="form-control" id="myInput" type="text" placeholder="Search..">
 <div class="table-responsive">
   <table class="table">
@@ -206,7 +206,7 @@ $('#searchBar').keyup(function() {
 });
 </script>
 
-  
+  -->
   
 <!-- .................................................................................   -->
   
@@ -243,7 +243,7 @@ $('#searchBar').keyup(function() {
 			<th data-field="date" data-filter-control="select" data-sortable="true">Category</th>
 			<th data-field="examen" data-filter-control="select" data-sortable="true">Announced</th>
 			<th data-field="note" data-sortable="true">Note</th>
-		<th data-field="examen" data-filter-control="select" data-sortable="true">Announced</th>
+		        <th data-field="exn" data-filter-control="select" data-sortable="true">Announced</th>
 
 
 </tr>
