--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@ $('#searchBar').keyup(function() {
   
 <!-- .................................................................................   -->
   
-  <style> 
+<!--  <style> 
           td.cell-h{}
           div,caption{}
-          div#dtable{}</style>
+          div#dtable{}</style> -->
   
 	
 <div class="container">
@@ -1180,6 +1180,12 @@ var $table = $('#table');
   
   
   
+
+
+
+
+
+
   
 <div class="container">
 <h1>Bootstrap Table</h1>
