Update and rename index3.html to index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
  
   </head>
-<body class="body">
+<body class="">
 <!-- <script>
 //exporte les données sélectionnées
 var $table = $('#table');
@@ -1210,11 +1210,11 @@ var $table = $('#table');
        class="table-responsive">
 	<thead>
 		<tr>
-			<th data-field="state" data-checkbox="true"></th>
-			<th data-field="prenom" data-filter-control="input" data-sortable="true">First Name</th>
-			<th data-field="date" data-filter-control="select" data-sortable="true">Date</th>
-			<th data-field="examen" data-filter-control="select" data-sortable="true">Examination</th>
-			<th data-field="note" data-sortable="true">Note</th>
+			<th data-field="ste" data-checkbox="true"></th>
+			<th data-field="pnom" data-filter-control="input" data-sortable="true">First Name</th>
+			<th data-field="te" data-filter-control="select" data-sortable="true">Date</th>
+			<th data-field="aen" data-filter-control="select" data-sortable="true">Examination</th>
+			<th data-field="ote" data-sortable="true">Note</th>
 		</tr>
 	</thead>
 	<tbody>
