--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <p>A table with third party integration  extension Filter control extension Data export</a> pour exporter</p>
 
-<div id="toolbar2">
+<div id="toolbar">
 		<select class="form-control">
 				<option value="">Export Basic</option>
 				<option value="all">Export All</option>
@@ -49,12 +49,12 @@
 </div>
 
 <table id="table2" 
-			 data-toggle="table2"
+			 data-toggle="table"
 			 data-search="true"
 			 data-filter-control="true" 
 			 data-show-export="true"
 			 data-click-to-select="true"
-			 data-toolbar="#toolbar2"
+			 data-toolbar="#toolbar"
        class="table-responsive">
 	<thead>
 		<tr>
@@ -185,7 +185,7 @@ var $table = $('#table');
 
 <p>A table with third party integration  extension Filter control extension Data export</a> pour exporter</p>
 
-<div id="toolbar">
+<div id="toolbar2">
 		<select class="form-control">
 				<option value="">Export Basic</option>
 				<option value="all">Export All</option>
@@ -193,13 +193,13 @@ var $table = $('#table');
 		</select>
 </div>
 
-		<table id="table" class="table-responsive"
-			 data-toggle="table"
+		<table id="table2" class="table-responsive"
+			 data-toggle="table2"
 			 data-search="true"
 			 data-filter-control="true" 
 			 data-show-export="true"
 			 data-click-to-select="true"
-			 data-toolbar="#toolbar">
+			 data-toolbar="#toolbar2">
 			<thead>
 		<tr>
 			<th data-field="state" data-checkbox="true"></th>
