--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ var $table = $('#table');
 			<tbody>
 				
 							<tr>
-                                                            		<td class="bs-checkbox "><input data-index="0" name="btSelectItem" type="checkbox"></td>
+                                                                <td class="bs-checkbox "><input data-index="0" name="btSelectItem" type="checkbox"></td>
 								<td> Redminote 10s </td>
                                                                 <td class="">Category</td>
 								<td class="">Mid-range</td>
@@ -443,9 +443,9 @@ var $table2 = $('#table2');
         });
     })
 
-		var trBoldBlue = $("table2");
+		var trBoldBlue2 = $("table2");
 
-	$(trBoldBlue).on("click", "tr", function (){
+	$(trBoldBlue2).on("click", "tr", function (){
 			$(this).toggleClass("bold-blue");
 	});
 </script>
