--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Fill the <b><a href="#form1">FORM 1 </a></b>if you want to know the smartphones 
 <iframe id="form2" src="https://docs.google.com/forms/d/e/1FAIpQLSfNLAlLWDHWSqnkhr82ruka-OLqzzt5VIMqyLgh8ELu-mBoDQ/viewform?embedded=true" width="400" height="450" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 <br>
-
+<a class="btn" href="https://rzp.io/l/WyIuAWi82j">Button</a>
 <div style="padding:30px">
 <p><span style="color:red">* </span><b> There</b> is not any smartphone which is best in all aspects. For example 
 if you want better camera than you may need to sacrifice with the cpu performance in the price range</p>
