--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
  
   </head>
-<body class="">
+<body>
 
   
 
@@ -35,8 +35,9 @@ Fill the <b><a href="#form1">FORM 1 </a></b>if you want to know the smartphones 
 <iframe id="form2" src="https://docs.google.com/forms/d/e/1FAIpQLSfNLAlLWDHWSqnkhr82ruka-OLqzzt5VIMqyLgh8ELu-mBoDQ/viewform?embedded=true" width="400" height="450" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 <br>
-<a class="btn" href="https://rzp.io/l/WyIuAWi82j">Button</a>
+
 <div style="padding:30px">
+<a type="button" class="btn btn-primary" href="https://rzp.io/l/WyIuAWi82j">Buy now</a>
 <p><span style="color:red">* </span><b> There</b> is not any smartphone which is best in all aspects. For example 
 if you want better camera than you may need to sacrifice with the cpu performance in the price range</p>
 <p>Some of the <u>average</u> performance smartphone under Rs 15000 are:-<br>
