--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
 </nav>
 
-
+<object data="object.html"></object>
 <p style="text-align:center"><b>Best smartphone under 15000</b><br><b>Free trial</b></p>
 <div style="padding:15px">
 <p> If you require any help regarding your buying decision of smartphone under Rs 15000 just tell us by filling the <b><a href="#form2">FORM2</a></b>
