--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Hiveoftech</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,11 +28,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
+        
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="https://user-images.githubusercontent.com/109153289/196019384-a4dcaded-dfc2-4aa8-9338-14c9276ecc4b.png">Pricing</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled">Disabled</a>
@@ -58,7 +56,7 @@
       <img src="https://user-images.githubusercontent.com/109153289/196019454-61cf08d6-6436-4b0c-9974-ba06248dff91.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="https://user-images.githubusercontent.com/109153289/196019384-a4dcaded-dfc2-4aa8-9338-14c9276ecc4b.png" class="d-block w-100" alt="...">
+      <img src="https://user-images.githubusercontent.com/109153289/196019438-ca0c5ebe-c288-4c6b-bceb-4d837964e10f.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -70,7 +68,6 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-
 
 
 
