--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 
 <p style="text-align:center"><b>Best smartphone under 15000</b><br><b>Free trial</b></p>
 <div style="padding:15px">
-<p> If you require any help regarding your buying decision of smartphone under Rs 15000 just tell us by filling the <b><a href="#form1">FORM1</a></b>
-and we will help you out in your problem</p>
-After filling the form our technical expert will reply you via chat, email or sms (whatever you like) and will guide you in your buying decision.<br>
+<p> If you want to know best smartphone under Rs 15000 that will meet your need just tell us by filling the <b><a href="#form1">FORM1</a></b>
+and we will help you out in your problem</p><br>
+<p>After filling the form our technical expert will reply you via chat, email or sms (whatever you like) and will guide you in your buying decision.</p><br>
 <p> If you want the paid version <a href="https://user-images.githubusercontent.com/109153289/196019384-a4dcaded-dfc2-4aa8-9338-14c9276ecc4b.png">click here</a> to see the pricing and <a href="">click here </a>to pay </div>
 
 <iframe id="form1" src="https://docs.google.com/forms/d/e/1FAIpQLSfKC0ycsBJOFBMIDvTWB_VfO51ifvJQ8WK-34LZNONtrP_zwQ/viewform?embedded=true" width="400" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
