--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ and we will help you out in your problem</p>
 <br>
 
 <div style="padding:30px">
-<a type="button" class="btn btn-primary" href="https://rzp.io/l/WyIuAWi82j">Buy now</a>
+<!-- <a type="button" class="btn btn-primary" href="https://rzp.io/l/WyIuAWi82j">Buy now</a>-->
 <p><span style="color:red">* </span><b> There</b> is not any smartphone which is best in all aspects. For example 
 if you want better camera than you may need to sacrifice with the cpu performance in the price range</p>
 <p>Some of the <u>average</u> performance smartphone under Rs 15000 are:-<br>
