--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </nav>
 
 
-
+<!--
 <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -67,7 +67,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
-</div>
+</div>-->
 
 
 
@@ -77,9 +77,9 @@
 
 
 
-<p style="text-align:center"><b>Best smartphone under 15000</b><br><b>Free trial</b></p>
+<p style="text-align:center"><b>Best smartphone under 15000 along with pros and cons</b><br><b></b></p>
 <div style="padding:15px">
-<p> If you want to know best smartphone under Rs 15000 that will meet your need just tell us by filling the <b><a href="#form1">FORM1</a></b>
+<p> If you want to know best smartphone under Rs 15000 (along with pros and cons) that will meet your need just tell us by filling the google <b><a href="#form1">FORM1</a></b>
 and we will help you out in your problem</p>
 <p>After filling the form our technical expert will reply you via chat, email or sms (whatever you like) and will guide you in your buying decision.</p>
 <!--<p> If you want the paid version <a href="https://user-images.githubusercontent.com/109153289/196019384-a4dcaded-dfc2-4aa8-9338-14c9276ecc4b.png">click here</a> to see the pricing and <a href="https://rzp.io/l/FjyqULln">click here </a>to pay</p>--> </div>
