--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@ But is not true. The backup of your phone depends on lots of factors. It depends
         data-bs-toggle="popover" data-bs-placement="right"
         data-bs-custom-class="custom-popover"
         data-bs-title="Custom popover"
-        data-bs-content="This popover is themed via CSS variables.">
+        data-bs-content="This popover is themed via CSS variables."
+        data-bs-trigger="focus">
   Custom popover
 </button>
 <script>
