--- a/index.html
+++ b/index.html
@@ -177,6 +177,29 @@ const exampleEl = document.getElementById('example')
 const popover = new bootstrap.Popover(exampleEl, options)
 </script>
   
+
+<ul><i class="bi bi-hand-thumbs-up amber-text"></i>Pros
+<li>400 pixels per inch </li>
+<li>120 Hz refresh rate</li>
+<li>Gorila glass 5 protection</li>
+<li>Exynos 1280 processor with 2.4 Ghz max clock speed</li>
+<li>UFS 2.2</li>
+<li>One UI 4.1 </li>
+<li>25 Watt fast charging </li>
+<li>50 MP back camera </li>
+<li>Ultra wide and macro camera</li>
+<li>4k recording</li>
+<li>NFC</li>
+<li>5G</li>
+<li>Headphone jack</li>
+<li>Dolby atmos </li>
+<li>5.1 Bluetooth support </li>
+</ul>
+
+
+
+
+
   </body>
 </html>
 
