--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ const popover = new bootstrap.Popover(exampleEl, options)
 </script>
   
 
-<ul><i class="bi bi-hand-thumbs-up amber-text"></i>Pros
+<ul><i class="bi bi-hand-thumbs-up text-success"></i> Pros
 <li>400 pixels per inch </li>
 <li>120 Hz refresh rate</li>
 <li>Gorila glass 5 protection</li>
