--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ and our technical adviser will contact you via sms,chat or email.</p>
 <li>Headphone jack</li>
 <li>Dolby atmos </li>
 <li>5.1 Bluetooth support </li>
-</ul>
+</ul></div>
 
 
 <div style="padding:30px">
