--- a/index.html
+++ b/index.html
@@ -41,40 +41,49 @@
 </nav>
 
 
-<!--
-<div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://user-images.githubusercontent.com/109153289/196019438-ca0c5ebe-c288-4c6b-bceb-4d837964e10f.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://user-images.githubusercontent.com/109153289/196019454-61cf08d6-6436-4b0c-9974-ba06248dff91.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://user-images.githubusercontent.com/109153289/196019438-ca0c5ebe-c288-4c6b-bceb-4d837964e10f.png" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>-->
-
-
-
-
-
 <br>
 
+<div class="card" style="width: 18rem;">
+  <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="">
+  <div class="card-body">
+    <h5 class="card-title">Samsung Galaxy M33 5g</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+   <button class=" btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Pros and Cons</button>
+  </div>
+</div>
+
+
+
+
+<div class="alert alert-info d-none d-lg-block">Resize your browser to show the responsive offcanvas toggle.</div>
+
+<div class="offcanvas-lg offcanvas-end" tabindex="-1" id="offcanvasResponsive" aria-labelledby="offcanvasResponsiveLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasResponsiveLabel">Responsive offcanvas</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+
+<ul><i class="bi bi-hand-thumbs-up text-success"></i> Pros
+<li>400 pixels per inch </li>
+<li>120 Hz refresh rate</li>
+<li>Gorila glass 5 protection</li>
+<li>Exynos 1280 processor with 2.4 Ghz max clock speed</li>
+<li>UFS 2.2</li>
+<li>One UI 4.1 </li>
+<li>25 Watt fast charging </li>
+<li>50 MP back camera </li>
+<li>Ultra wide and macro camera</li>
+<li>4k recording</li>
+<li>NFC</li>
+<li>5G</li>
+<li>Headphone jack</li>
+<li>Dolby atmos </li>
+<li>5.1 Bluetooth support </li>
+</ul>
+    <p class="mb-0">This is content within an <code>.offcanvas-lg</code>.</p>
+  </div>
+</div>
 
 
 <p style="text-align:center"><b>Best smartphone under 15000 along with pros and cons</b><br><b></b></p>
@@ -103,24 +112,7 @@ the same price range </p>
 and our technical adviser will contact you via sms,chat or email.</p>
 <p><span style="color:red">*</span><b>If</b> you are confused with the<u> buying decision </u>on some smartphones then fill only your contact details given below on the google form.Our team will contact and help you in your buying decision</p>
 
-
-<ul><i class="bi bi-hand-thumbs-up text-success"></i> Pros
-<li>400 pixels per inch </li>
-<li>120 Hz refresh rate</li>
-<li>Gorila glass 5 protection</li>
-<li>Exynos 1280 processor with 2.4 Ghz max clock speed</li>
-<li>UFS 2.2</li>
-<li>One UI 4.1 </li>
-<li>25 Watt fast charging </li>
-<li>50 MP back camera </li>
-<li>Ultra wide and macro camera</li>
-<li>4k recording</li>
-<li>NFC</li>
-<li>5G</li>
-<li>Headphone jack</li>
-<li>Dolby atmos </li>
-<li>5.1 Bluetooth support </li>
-</ul></div>
+</div>
 
 
 <div style="padding:30px">
