--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <br>
 
 <div class="card" style="width: 18rem;">
-  <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="">
+  <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="" style="width:50%;height:30%">
   <div class="card-body">
     <h5 class="card-title">Samsung Galaxy M33 5g</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
