--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
   <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
   <div class="card-body">
     <h5 class="card-title">Samsung Galaxy M33 5g</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text"></p>
    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Pros and Cons</button>
+<button class="btn brn-primary" type="button" style="left:0">Full specifications</button>
   </div>
 </div>
 
