--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
 <br>
-
+<div style="padding:20px">
 <div class="card" style="width: 18rem;">
   <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
   <div class="card-body">
@@ -52,7 +52,7 @@
 <button class="btn brn-primary" type="button" style="left:0">Full specifications</button>
   </div>
 </div>
-
+</div>
 
 
 
