--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h5 class="card-title">Samsung Galaxy M33 5g</h5>
     <p class="card-text"></p>
    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Pros and Cons</button>
-<button class="btn brn-primary" type="button" style="left:0">Full specifications</button>
+<button href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="btn btn-primary" type="button" style="left:0">Full specifications</button>
   </div>
 </div>
 </div>
@@ -65,7 +65,7 @@
   </div>
   <div class="offcanvas-body">
 
-<ul><i class="bi bi-hand-thumbs-up text-success"></i> Pros
+<ul><i class="bi bi-hand-thumbs-up text-success"></i><code> Pros</code>
 <li>400 pixels per inch </li>
 <li>120 Hz refresh rate</li>
 <li>Gorila glass 5 protection</li>
@@ -82,7 +82,7 @@
 <li>Dolby atmos </li>
 <li>5.1 Bluetooth support </li>
 </ul>
-    <p class="mb-0">This is content within an <code>.offcanvas-lg</code>.</p>
+    <p class="mb-0"></p>
   </div>
 </div>
 
