--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h5 class="card-title">Samsung Galaxy M33 5g</h5>
     <p class="card-text"></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Pros and Cons</button>
-<button style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="btn btn-primary" type="button" style="left:0">Full specifications</button>
+<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="" type="">Full specifications</a>
   </div>
 </div>
 </div>
