--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>-->
 
 <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="5377ec78-6f0c-4c19-90af-84f7d08368e8";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
-<nav class="navbar navbar-expand-lg bg-primary">
+<nav class="navbar navbar-expand-lg " style="background-color: #e3f2fd;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Hiveoftech</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,8 @@
   <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
   <div class="card-body">
     <h5 class="card-title">Samsung Galaxy M33 5g</h5>
-    <p class="card-text"></p>
+    <p class="card-text">
+<li>Samsung</li><li>Galaxy</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Pros and Cons</button><br>
 <a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="" type="">Full specifications</a>
   </div>
