--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
     <h5 class="card-title">Samsung Galaxy M33 5g</h5>
     <p class="card-text">
 <li>Samsung</li><li>Galaxy</li></p>
-   <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Pros and Cons</button><br>
-<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="" type="">Full specifications</a>
+   <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
+<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="" type="">Full specifications</a><br>
+<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="" type="">Full specifications</a><br>
+<a style="display:inline-block;color:aqua" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="" type="">Full specifications</a><br>
   </div>
 </div>
 </div>
