--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 <li>Samsung</li><li>Galaxy</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
 <a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="" type="">Full specifications</a><br>
-<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="" type="">Full specifications</a><br>
-<a style="display:inline-block;color:aqua" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="" type="">Full specifications</a><br>
+<a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
+<a class="text-info" style="display:inline-block;font-size:10px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy ?</a><br>
   </div>
 </div>
 </div>
@@ -68,7 +68,7 @@
   </div>
   <div class="offcanvas-body">
 
-<ul><i class="bi bi-hand-thumbs-up text-success"></i><code> Pros</code>
+<ul><i class="bi bi-hand-thumbs-up text-success"></i><code class="text-success" > Pros</code>
 <li>400 pixels per inch </li>
 <li>120 Hz refresh rate</li>
 <li>Gorila glass 5 protection</li>
