--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <p class="card-text">
 <li>Samsung</li><li>Galaxy</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
-<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="" type="">Full specifications</a><br>
+<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
 <a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
-<a class="text-info" style="display:inline-block;font-size:10px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy ?</a><br>
+<a class="text-info" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy ?</a><br>
   </div>
 </div>
 </div>
