--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
   <div class="card-body">
     <h5 class="card-title">Samsung Galaxy M33 5g</h5>
     <p class="card-text">
-<li>Samsung</li><li>Galaxy</li></p>
+<li>6 GB DDR4X RAM</li><li>Samsung Exynos 1280 with 2.4 GHz max clock </li><li>128 GB UFS 2.2 storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
 <a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
 <a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
-<a class="text-info" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy ?</a><br>
+<a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
   </div>
 </div>
 </div>
@@ -84,7 +84,12 @@
 <li>Headphone jack</li>
 <li>Dolby atmos </li>
 <li>5.1 Bluetooth support </li>
-</ul>
+</ul><br>
+<ul><i class="bi bi-hand-thumbs-down text-danger"></i><code class="text-danger" > Cons</code>
+<li>TFT display</li>
+<li>No HDR support</li>
+<li>8 MP front camera</li>
+<li>Decent GPU</li>
     <p class="mb-0"></p>
   </div>
 </div>
