--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <li>TFT display</li>
 <li>No HDR support</li>
 <li>8 MP front camera</li>
-<li>Decent GPU</li>
+<li>Decent GPU</li></ul>
     <p class="mb-0"></p>
   </div>
 </div>
