--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div class="card-body">
     <h5 class="card-title">Samsung Galaxy M33 5g</h5>
     <p class="card-text">
-<li>6 GB DDR4X RAM</li><li>Samsung Exynos 1280 with 2.4 GHz max clock </li><li>128 GB UFS 2.2 storage</li></p>
+<li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
 <a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
 <a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
